# appnut

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cursor/rules/: ai-team-charter.mdc  role-builder.mdc  role-dev.mdc  role-pm.mdc  role-qa.mdc
.github/workflows/: ci.yml
_Meta/: CHARTER.md  PROGRESS.md
_Meta/PRDs/: 0001-product-requirements.md  0003-dual-mode-deployment.md  0004-rbac-permission.md
crates/bff/derive/: Cargo.toml
crates/bff/derive/src/: handlers.rs  lib.rs  request.rs  state.rs
crates/bff/ffi/: Cargo.toml  cbindgen.toml
crates/bff/ffi/include/: flux_ffi.h
crates/bff/ffi/src/: lib.rs  module.rs
crates/bff/runtime/: Cargo.toml
crates/bff/runtime/src/: app.rs  i18n.rs  lib.rs  module.rs  router.rs  store.rs  trie.rs
crates/dsl/client/: Cargo.toml
crates/dsl/client/src/: lib.rs
crates/dsl/macro/: Cargo.toml
crates/dsl/macro/src/: enum_impl.rs  facet.rs  flatbuf.rs  lib.rs  model.rs
crates/dsl/store/: Cargo.toml
crates/dsl/store/src/: admin.rs  format.rs  hierarchy.rs  kv.rs  lib.rs  schema.rs  search.rs  sql.rs  ui.rs  ui_macro.rs
crates/dsl/types/: Cargo.toml
crates/dsl/types/src/: format.rs  lib.rs
crates/dsl/web/: Cargo.toml
crates/support/blob/: Cargo.toml
crates/support/blob/benches/: blob_bench.rs
crates/support/blob/src/: file.rs  lib.rs
crates/support/core/: Cargo.toml
crates/support/core/src/: auth.rs  config.rs  error.rs  lib.rs  rbac.rs  types.rs
crates/support/kv/: Cargo.toml
crates/support/kv/benches/: kv_bench.rs
crates/support/kv/src/: file_loader.rs  lib.rs  redb.rs
crates/support/search/: Cargo.toml
crates/support/search/benches/: search_bench.rs
crates/support/search/src/: lib.rs  tantivy.rs
crates/support/sql/: Cargo.toml
crates/support/sql/benches/: sql_bench.rs
crates/support/sql/src/: lib.rs  sqlite.rs
example/ios/FluxSDK/: Package.swift
example/ios/FluxSDK/Sources/: FluxClient.swift  FluxStore.swift
example/ios/TwitterFlux/: Package.swift
example/ios/TwitterFlux/.build/index-build/: plugin-tools.yaml  workspace-state.json
example/ios/TwitterFlux/.build/index-build/arm64-apple-macosx/debug/: plugin-tools-description.json
example/ios/TwitterFlux/.build/index-build/arm64-apple-macosx/debug/FluxSDK.build/: output-file-map.json
example/ios/TwitterFlux/.build/index-build/arm64-apple-macosx/debug/FluxSDK.build/include/: module.modulemap
example/ios/TwitterFlux/.build/index-build/arm64-apple-macosx/debug/ModuleCache/FRSO9Z5WDJZJ/: CFNetwork-1PNPO1ORVQZLS.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  IOKit-1IAL9NTK1TABA.pcm  MachO-20RPYVQSX341K.pcm  ObjectiveC-1G8H182PQX3QE.pcm  Security-3QCVXOV25KK54.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  XPC-T0ZXCAST7PE3.pcm  _AvailabilityInternal-2YSBQADOLX02V.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm  _Builtin_stdbool-19KE09ZDXQ6Q3.pcm  _Builtin_stddef-19KE09ZDXQ6Q3.pcm  _Builtin_stdint-19KE09ZDXQ6Q3.pcm  _DarwinFoundation1-2YSBQADOLX02V.pcm  _DarwinFoundation2-3J4ZFA06I5V1P.pcm  _DarwinFoundation3-2NSGASPTSNBVQ.pcm  _SwiftConcurrencyShims-2IMTS4WWRU7VJ.pcm  launch-3T3BU4MASLMUM.pcm  libDER-26DYHF6GC6WWA.pcm  libkern-2KQ0X67RTM1JF.pcm  os_object-2MV8OP7R98AN8.pcm  os_workgroup-2MV8OP7R98AN8.pcm  ptrauth-19KE09ZDXQ6Q3.pcm  ptrcheck-19KE09ZDXQ6Q3.pcm  sys_types-3J4ZFA06I5V1P.pcm
example/ios/TwitterFlux/TwitterFlux/: MainTabView.swift  RootView.swift  TwitterFluxApp.swift
example/ios/TwitterFlux/TwitterFlux/Views/: ComposeView.swift  InboxView.swift  LoginView.swift  ProfileView.swift  SearchView.swift  SettingsView.swift  TimelineView.swift  TweetDetailView.swift
example/rust/: Cargo.toml  lib.rs  main.rs  module.rs
example/rust/bff/dsl/request/global/: app.rs  auth.rs  search.rs  settings.rs  tweet.rs  user.rs
example/rust/bff/dsl/state/global/: profile.rs  search.rs  timeline.rs  tweet_detail.rs
example/rust/bff/src/: i18n_strings.rs  mod.rs
example/rust/bff/src/global/: helpers.rs
example/rust/server/dsl/model/: like.rs  mod.rs
example/rust/server/dsl/rest/: app.rs
example/rust/server/src/: facet_handlers.rs  i18n.rs  jwt.rs  mod.rs  roles.rs  store_impls.rs
example/rust/shop/: Cargo.toml  lib.rs  main.rs  module.rs
example/rust/shop/bff/dsl/request/global/: address.rs  auth.rs  cart.rs  catalog.rs  mod.rs  order.rs  search.rs
example/rust/shop/bff/dsl/state/global/: address.rs  auth.rs  cart.rs  catalog.rs  mod.rs  order.rs  product.rs  search.rs
example/rust/shop/bff/src/: i18n_strings.rs  mod.rs
example/rust/shop/bff/src/global/: helpers.rs
example/rust/shop/server/dsl/model/: address.rs  cart_item.rs  category.rs  mod.rs  order.rs  order_item.rs  product.rs  review.rs  shop.rs  user.rs
example/rust/shop/server/dsl/rest/: app.rs
example/rust/shop/server/src/: facet_handlers.rs  i18n.rs  jwt.rs  mod.rs  payment.rs  roles.rs  store_impls.rs
example/twitter_flux/: pubspec.yaml
example/twitter_flux/android/app/: build.gradle.kts
example/twitter_flux/ios/Runner/: Info.plist
example/twitter_flux/ios/Runner.xcodeproj/: project.pbxproj
example/twitter_flux/lib/: main.dart
example/twitter_flux/lib/models/: models.dart
example/twitter_flux/lib/services/: flux_client.dart
example/twitter_flux/lib/views/: inbox_view.dart  login_view.dart  search_view.dart  settings_view.dart  timeline_view.dart
example/twitter_flux/test/: widget_test.dart
scripts/: build-ios.sh
(+54 files in other folders)
