[package]
name = "flux-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "flux_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]
path = "src/lib.rs"

[dependencies]
axum.workspace = true
base64.workspace = true
chrono.workspace = true
openerp-blob = { path = "../../support/blob" }
openerp-core = { path = "../../support/core" }
openerp-flux = { path = "../runtime" }
openerp-kv = { path = "../../support/kv" }
openerp-web = { path = "../../dsl/web" }
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
