[package]
name = "openerp-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "openerp_core"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
